EditorEventListener::HandleEvent should stop handling event when certain conditions are met
Categories
(Core :: DOM: Selection, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox118 | --- | wontfix |
| firefox119 | --- | wontfix |
| firefox120 | --- | wontfix |
| firefox121 | --- | fixed |
People
(Reporter: sefeng211, Assigned: exactlyajay.chauhan, Mentored)
References
(Regression)
Details
(Keywords: good-first-bug, regression, Whiteboard: [lang=c++])
Attachments
(1 file, 1 obsolete file)
Basically we should stop handling this event when
- originalEventTargetNode is null
- internalEvent->mMessage is eFocus
- aEvent->GetCurrentTarget is a
RootWindow()
To verify the fix, one can run editor/libeditor/crashtests/1424450.html can confirm the following warnings doesn't appear anymore.
0:28.64 GECKO(1202335) [Child 1203360, Main Thread] WARNING: '!originalEventTargetNode', file /home/sefeng/.local/workspace/mozilla/mozilla-unified2/editor/libeditor/EditorEventListener.cpp:1152
0:28.64 GECKO(1202335) [Child 1203360, Main Thread] WARNING: EditorEventListener::Focus() failed: 'NS_SUCCEEDED(rv)', file /home/sefeng/.local/workspace/mozilla/mozilla-unified2/editor/libeditor/EditorEventListener.cpp:473
Comment 1•2 years ago
|
||
Set release status flags based on info from the regressing bug 1817723
| Reporter | ||
Comment 2•2 years ago
|
||
This relates to a warning message, updating the flags accordingly.
Hello, Sean Feng [:sefeng]
I attempted to replicate the warning by executing the command ./mach test editor/libeditor/crashtests/1424450.html but couldn't. Additionally, I adjusted the 'mozconfig' to activate debug mode.
This is the result I got: https://pastebin.mozilla.org/DPmLvzzQ
| Reporter | ||
Comment 4•2 years ago
|
||
Can I see your mozconfig? This doesn't look like a debug build https://pastebin.mozilla.org/DPmLvzzQ#L73
mozconfig: https://pastebin.mozilla.org/SysoLDpa
https://firefox-source-docs.mozilla.org/setup/configuring_build_options.html
I created a blank mozconfig file in the source dir (mozilla-unified/mozconfig) and added this line to it ac_add_options --enable-debug
| Reporter | ||
Comment 6•2 years ago
|
||
That looks correct. You need to build and run with that config file. I can't tell what's wrong. Maybe do something like
env MOZCONFIG=/path/to/that/mozconfig/file ./mach build
env MOZCONFIG=/path/to/that/mozconfig/file ./mach test editor/libeditor/crashtests/1424450.html
and see if this fixes it?
Updated•2 years ago
|
Thanks. After a clean build, I was able to replicate the warning.
Updated•2 years ago
|
Updated•2 years ago
|
Updated•2 years ago
|
Comment 10•2 years ago
|
||
Comment 11•2 years ago
|
||
| bugherder | ||
Comment 12•2 years ago
|
||
The patch landed in nightly and beta is affected.
:exactlyajay.chauhan, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox120towontfix.
For more information, please visit BugBot documentation.
Updated•2 years ago
|
| Reporter | ||
Comment 13•2 years ago
|
||
This just fixes some warnings. No need to uplift
Description
•