Bug 1859355 - Exit EditorEventListener::HandleEvent early when the event can't be handled r=sefeng

Differential Revision: https://phabricator.services.mozilla.com/D191445